--- a/src/app/management/routes/clients/client-manager.component.html
+++ b/src/app/management/routes/clients/client-manager.component.html
@@ -1,22 +1,22 @@
-<div class="full-height">
+<div class="full-size">
 
   <centered-mat-spinner *ngIf="loading$ | async">
   </centered-mat-spinner>
 
-  <div class="full-width" [hidden]="loading$ | async">
-    <div class="pagina overflow">
+  <div class="data-manager" [hidden]="loading$ | async">
+    <div class="table-wrapper">
 
       <table mat-table class="full-width-min" [dataSource]="items$">
-        <ng-container matColumnDef="nombre">
+        <ng-container matColumnDef="name">
           <th mat-header-cell *matHeaderCellDef> Nombre </th>
-          <td mat-cell *matCellDef="let cliente" class="left">
-            {{cliente.nombre}}
+          <td mat-cell *matCellDef="let client" class="left">
+            {{client.person.name}}
           </td>
         </ng-container>
-        <ng-container matColumnDef="rut">
+        <ng-container matColumnDef="idCard">
           <th mat-header-cell *matHeaderCellDef> Rut </th>
-          <td mat-cell *matCellDef="let cliente" class="left">
-            {{cliente.rutPersona}}
+          <td mat-cell *matCellDef="let client" class="left">
+            {{client.person.idCard}}
           </td>
         </ng-container>
 
