--- a/src/app/management/routes/providers/provider-manager.component.html
+++ b/src/app/management/routes/providers/provider-manager.component.html
@@ -1,38 +1,38 @@
-<div class="full-height">
+<div class="full-size">
 
   <centered-mat-spinner *ngIf="loading$ | async">
   </centered-mat-spinner>
 
-  <div class="full-width" [hidden]="loading$ | async">
-    <div class="pagina overflow">
+  <div class="data-manager" [hidden]="loading$ | async">
+    <div class="table-wrapper">
 
       <table mat-table class="full-width-min" [dataSource]="items$">
-        <ng-container matColumnDef="nombre">
+        <ng-container matColumnDef="name">
           <th mat-header-cell *matHeaderCellDef> Nombre </th>
-          <td mat-cell *matCellDef="let proveedor" class="left">
-            {{proveedor.nombre}}
+          <td mat-cell *matCellDef="let provider" class="left">
+            {{provider.person.name}}
           </td>
         </ng-container>
-        <ng-container matColumnDef="rut">
+        <ng-container matColumnDef="idCard">
           <th mat-header-cell *matHeaderCellDef> Rut </th>
-          <td mat-cell *matCellDef="let proveedor" class="left">
-            {{proveedor.rutPersona}}
+          <td mat-cell *matCellDef="let provider" class="left">
+            {{provider.person.idCard}}
           </td>
         </ng-container>
-        <ng-container matColumnDef="acciones">
+        <ng-container matColumnDef="actions">
           <th mat-header-cell *matHeaderCellDef> </th>
-          <td mat-cell *matCellDef="let proveedor">
-            <div class="acciones">
+          <td mat-cell *matCellDef="let provider">
+            <div>
               <button mat-button mat-icon-button
-                color="primary" class="details"
+                color="primary"
                 [disabled]="busy$ | async"
-                (click)="onClickEditar(proveedor)">
+                (click)="onClickEdit(provider)">
                 <mat-icon>edit</mat-icon>
               </button>
               <button mat-button mat-icon-button
-                color="warn" class="delete"
+                color="warn"
                 [disabled]="busy$ | async"
-                (click)="onClickBorrar(proveedor)">
+                (click)="onClickDelete(provider)">
                 <mat-icon>delete</mat-icon>
               </button>
             </div>
