--- a/src/app/management/routes/purchase_orders/purchase-order-manager.component.html
+++ b/src/app/management/routes/purchase_orders/purchase-order-manager.component.html
@@ -1,44 +1,44 @@
-<div class="full-height">
+<div class="full-size">
 
   <centered-mat-spinner *ngIf="loading$ | async">
   </centered-mat-spinner>
 
-  <div class="full-width" [hidden]="loading$ | async">
-    <div class="pagina overflow">
+  <div class="data-manager" [hidden]="loading$ | async">
+    <div class="table-wrapper">
 
       <table mat-table class="full-width-min" [dataSource]="items$">
-        <ng-container matColumnDef="numero">
+        <ng-container matColumnDef="id">
           <th mat-header-cell *matHeaderCellDef> No. </th>
-          <td mat-cell *matCellDef="let ordenCompra" class="left">
-            {{ordenCompra.id}}
+          <td mat-cell *matCellDef="let pOrder" class="left">
+            {{pOrder.id}}
           </td>
         </ng-container>
-        <ng-container matColumnDef="fechaSolicitud">
+        <ng-container matColumnDef="orderDate">
           <th mat-header-cell *matHeaderCellDef> Fecha Solicitud </th>
-          <td mat-cell *matCellDef="let ordenCompra" class="left">
-            {{ordenCompra.fechaSolicitudOrdenCompra}}
+          <td mat-cell *matCellDef="let pOrder" class="left">
+            {{pOrder.orderedOn}}
           </td>
         </ng-container>
-        <ng-container matColumnDef="fechaRecepcion">
+        <ng-container matColumnDef="receiptDate">
           <th mat-header-cell *matHeaderCellDef> Fecha Recepción </th>
-          <td mat-cell *matCellDef="let ordenCompra" class="left">
-            {{ordenCompra.fechaRecepcionOrdenCompra}}
+          <td mat-cell *matCellDef="let pOrder" class="left">
+            {{pOrder.receivedOn}}
           </td>
         </ng-container>
-        <ng-container matColumnDef="acciones">
+        <ng-container matColumnDef="actions">
           <th mat-header-cell *matHeaderCellDef> </th>
-          <td mat-cell *matCellDef="let ordenCompra">
+          <td mat-cell *matCellDef="let pOrder">
             <div class="acciones">
               <button mat-button mat-icon-button
-                color="primary" class="details"
+                color="primary"
                 [disabled]="busy$ | async"
-                (click)="onClickEditar(ordenCompra)">
+                (click)="onClickEdit(pOrder)">
                 <mat-icon>edit</mat-icon>
               </button>
               <button mat-button mat-icon-button
-                color="warn" class="delete"
+                color="warn"
                 [disabled]="busy$ | async"
-                (click)="onClickBorrar(ordenCompra)">
+                (click)="onClickDelete(pOrder)">
                 <mat-icon>delete</mat-icon>
               </button>
             </div>
