--- a/src/app/management/routes/sales/sell-manager.component.html
+++ b/src/app/management/routes/sales/sell-manager.component.html
@@ -1,38 +1,38 @@
-<div class="full-height">
+<div class="full-size">
 
   <centered-mat-spinner *ngIf="loading$ | async">
   </centered-mat-spinner>
 
-  <div class="full-width" [hidden]="loading$ | async">
-    <div class="pagina overflow">
+  <div class="data-manager" [hidden]="loading$ | async">
+    <div class="table-wrapper">
 
       <table mat-table class="full-width-min" [dataSource]="items$">
-        <ng-container matColumnDef="numero">
+        <ng-container matColumnDef="id">
           <th mat-header-cell *matHeaderCellDef> No. </th>
-          <td mat-cell *matCellDef="let venta" class="left">
-            {{venta.id}}
+          <td mat-cell *matCellDef="let sell" class="left">
+            {{sell.id}}
           </td>
         </ng-container>
-        <ng-container matColumnDef="fecha">
+        <ng-container matColumnDef="date">
           <th mat-header-cell *matHeaderCellDef> Fecha </th>
-          <td mat-cell *matCellDef="let venta" class="left">
-            {{venta.fechaVenta}}
+          <td mat-cell *matCellDef="let sell" class="left">
+            {{sell.soldOn}}
           </td>
         </ng-container>
-        <ng-container matColumnDef="acciones">
+        <ng-container matColumnDef="actions">
           <th mat-header-cell *matHeaderCellDef> </th>
-          <td mat-cell *matCellDef="let venta">
+          <td mat-cell *matCellDef="let sell">
             <div class="acciones">
               <button mat-button mat-icon-button
-                color="primary" class="details"
+                color="primary"
                 [disabled]="busy$ | async"
-                (click)="onClickEditar(venta)">
+                (click)="onClickEdit(sell)">
                 <mat-icon>edit</mat-icon>
               </button>
               <button mat-button mat-icon-button
-                color="warn" class="delete"
+                color="warn"
                 [disabled]="busy$ | async"
-                (click)="onClickBorrar(venta)">
+                (click)="onClickDelete(sell)">
                 <mat-icon>delete</mat-icon>
               </button>
             </div>
