--- a/src/app/management/routes/users/user-manager.component.html
+++ b/src/app/management/routes/users/user-manager.component.html
@@ -1,50 +1,50 @@
-<div class="full-height">
+<div class="full-size">
 
   <centered-mat-spinner *ngIf="loading$ | async">
   </centered-mat-spinner>
 
-  <div class="full-width" [hidden]="loading$ | async">
-    <div class="pagina overflow">
+  <div class="data-manager" [hidden]="loading$ | async">
+    <div class="table-wrapper">
 
       <table mat-table class="full-width-min" [dataSource]="items$">
-        <ng-container matColumnDef="nombre">
+        <ng-container matColumnDef="name">
           <th mat-header-cell *matHeaderCellDef> Nombre de Usuario </th>
-          <td mat-cell *matCellDef="let usuario" class="left">
-            {{usuario.nombre}}
+          <td mat-cell *matCellDef="let user" class="left">
+            {{user.name}}
           </td>
         </ng-container>
-        <ng-container matColumnDef="fechaCreacion">
+        <ng-container matColumnDef="creationDate">
           <th mat-header-cell *matHeaderCellDef> Fecha de Creación </th>
-          <td mat-cell *matCellDef="let usuario" class="left">
-            {{usuario.fechaCreacionUsuario}}
+          <td mat-cell *matCellDef="let user" class="left">
+            {{user.createdOn}}
           </td>
         </ng-container>
-        <ng-container matColumnDef="nombreCompleto">
+        <ng-container matColumnDef="fullName">
           <th mat-header-cell *matHeaderCellDef> Nombre Real </th>
-          <td mat-cell *matCellDef="let usuario" class="left">
-            {{usuario.nombrePersona}}
+          <td mat-cell *matCellDef="let user" class="left">
+            {{user.person.name}}
           </td>
         </ng-container>
-        <ng-container matColumnDef="rut">
+        <ng-container matColumnDef="idCard">
           <th mat-header-cell *matHeaderCellDef> Rut </th>
-          <td mat-cell *matCellDef="let usuario" class="left">
-            {{usuario.rutPersona}}
+          <td mat-cell *matCellDef="let user" class="left">
+            {{user.person.idCard}}
           </td>
         </ng-container>
-        <ng-container matColumnDef="acciones">
+        <ng-container matColumnDef="actions">
           <th mat-header-cell *matHeaderCellDef> </th>
-          <td mat-cell *matCellDef="let usuario">
-            <div class="acciones">
+          <td mat-cell *matCellDef="let user">
+            <div>
               <button mat-button mat-icon-button
-                color="primary" class="details"
+                color="primary"
                 [disabled]="busy$ | async"
-                (click)="onClickEditar(usuario)">
+                (click)="onClickEdit(user)">
                 <mat-icon>edit</mat-icon>
               </button>
               <button mat-button mat-icon-button
-                color="warn" class="delete"
+                color="warn"
                 [disabled]="busy$ | async"
-                (click)="onClickBorrar(usuario)">
+                (click)="onClickDelete(user)">
                 <mat-icon>delete</mat-icon>
               </button>
             </div>
@@ -55,6 +55,7 @@
         <tr mat-row *matRowDef="let row; columns: tableColumns;"></tr>
       </table>
     </div>
+
     <app-data-actions
       (add)="onClickAdd()">
     </app-data-actions>
