includes module prefix into newly added component

--- a/src/app/management/routes/products/product-manager.component.html
+++ b/src/app/management/routes/products/product-manager.component.html
@@ -68,9 +68,9 @@
       </table>
 
     </div>
-    <app-data-actions
+    <app-management-data-actions
       (add)="onClickAdd()">
-    </app-data-actions>
+    </app-management-data-actions>
   </div>
 
 </div>
