--- a/src/app/management/routes/users/user-manager.component.html
+++ b/src/app/management/routes/users/user-manager.component.html
@@ -56,9 +56,9 @@
       </table>
     </div>
 
-    <app-data-actions
+    <app-management-data-actions
       (add)="onClickAdd()">
-    </app-data-actions>
+    </app-management-data-actions>
   </div>
 
 </div>
