--- a/src/app/management/routes/purchase_orders/purchase-order-manager.component.html
+++ b/src/app/management/routes/purchase_orders/purchase-order-manager.component.html
@@ -50,9 +50,9 @@
       </table>
 
     </div>
-    <app-data-actions
+    <app-management-data-actions
       (add)="onClickAdd()">
-    </app-data-actions>
+    </app-management-data-actions>
   </div>
 
 </div>
