--- a/src/app/management/routes/sales/sell-manager.component.html
+++ b/src/app/management/routes/sales/sell-manager.component.html
@@ -44,9 +44,9 @@
       </table>
 
     </div>
-    <app-data-actions
+    <app-management-data-actions
       (add)="onClickAdd()">
-    </app-data-actions>
+    </app-management-data-actions>
   </div>
 
 </div>
