hotfixes for person form component

--- a/src/app/shared/person-form/person-form.component.css
+++ b/src/app/shared/person-form/person-form.component.css
@@ -1,21 +1,21 @@
 form {
   display: grid;
   grid-template-areas:
-    'nombre'
-    'rut'
+    'name'
+    'idCard'
     'email'
-    'direccion'
-    'fono1'
-    'fono2';
+    'address'
+    'phone1'
+    'phone2';
 }
 
 @media(min-width: 800px) {
   form {
     grid-gap: 1rem;
     grid-template-areas:
-      'nombre nombre nombre nombre'
-      'rut email email email'
-      'direccion direccion direccion direccion'
-      'fono1 fono1 fono2 fono2';
+      'name name name name'
+      'idCard email email email'
+      'address address address address'
+      'phone1 phone1 phone2 phone2';
   }
 }
