--- a/src/app/shared/person-form/person-form.component.html
+++ b/src/app/shared/person-form/person-form.component.html
@@ -1,26 +1,26 @@
 <form [formGroup]="formGroup">
 
-  <mat-form-field style="grid-area: nombre">
-    <input matInput placeholder="Nombre Completo" formControlName="nombre" />
+  <mat-form-field style="grid-area: name">
+    <input matInput placeholder="Nombre Completo" formControlName="name" />
   </mat-form-field>
 
-  <mat-form-field style="grid-area: rut">
-    <input matInput placeholder="Rut" formControlName="rut" />
+  <mat-form-field style="grid-area: idCard">
+    <input matInput placeholder="Rut" formControlName="idCard" />
   </mat-form-field>
 
   <mat-form-field style="grid-area: email">
     <input matInput placeholder="Email" formControlName="email" />
   </mat-form-field>
 
-  <mat-form-field style="grid-area: direccion">
-    <input matInput placeholder="Dirección" formControlName="direccion" />
+  <mat-form-field style="grid-area: address">
+    <input matInput placeholder="Dirección" formControlName="address" />
   </mat-form-field>
 
-  <mat-form-field style="grid-area: fono1">
-    <input matInput placeholder="Teléfono 1" formControlName="fono1" />
+  <mat-form-field style="grid-area: phone1">
+    <input matInput placeholder="Teléfono 1" formControlName="phone1" />
   </mat-form-field>
 
-  <mat-form-field style="grid-area: fono2">
-    <input matInput placeholder="Teléfono 2" formControlName="fono2" />
+  <mat-form-field style="grid-area: phone2">
+    <input matInput placeholder="Teléfono 2" formControlName="phone2" />
   </mat-form-field>
 </form>
