--- a/src/app/management/routes/users/form-dialog/user-manager-form-dialog.component.html
+++ b/src/app/management/routes/users/form-dialog/user-manager-form-dialog.component.html
@@ -22,17 +22,17 @@
         </mat-select>
       </mat-form-field>
 
+      <div class="actions">
+        <button mat-button mat-raised-button type="submit"
+          color="primary"
+          [disabled]="formGroup.invalid">
+          Aceptar
+        </button>
+        <button mat-button mat-raised-button type="button"
+          (click)="onCancel()">
+          Cancelar
+        </button>
+      </div>
     </form>
-    <div class="actions">
-      <button mat-button mat-raised-button type="submit"
-        color="primary"
-        [disabled]="formGroup.invalid">
-        Aceptar
-      </button>
-      <button mat-button mat-raised-button
-        (click)="onCancel()">
-        Cancelar
-      </button>
-    </div>
   </div>
 </div>
