--- a/src/app/management/routes/purchase_orders/form-dialog/purchase-order-manager-form-dialog.component.html
+++ b/src/app/management/routes/purchase_orders/form-dialog/purchase-order-manager-form-dialog.component.html
@@ -30,7 +30,7 @@
       <mat-card style="grid-area: details">
         <div class="details-header">
           <h3>Productos Solicitados</h3>
-          <button mat-button mat-raised-button
+          <button mat-button mat-raised-button type="button"
             color="primary"
             [disabled]="provider.invalid"
             (click)="onClickAddProducts()">
@@ -61,10 +61,10 @@
                   </button>
                   <input matInput class="quantity" type="number"
                     min="1"
-                    [(ngModel)]="detail.cantidadProducto"
+                    [(ngModel)]="detail.units"
                     [ngModelOptions]="{ standalone: true }" />
                   <button mat-button mat-icon-button
-                    [disabled]="detail.cantidadProducto < 2"
+                    [disabled]="detail.units < 2"
                     (click)="onClickDecreaseDetailProductQuantity(i)">
                     <mat-icon>remove</mat-icon>
                   </button>
@@ -75,8 +75,9 @@
               <th mat-header-cell *matHeaderCellDef> </th>
               <td mat-cell *matCellDef="let i=index">
                 <div>
-                  <button mat-button mat-icon-button color="warn" class="delete" [disabled]="busy$ | async"
-                    (click)="onClickBorrarDetalle(i)">
+                  <button mat-button mat-icon-button color="warn"
+                    [disabled]="busy$ | async"
+                    (click)="onClickRemoveDetail(i)">
                     <mat-icon>delete</mat-icon>
                   </button>
                 </div>
@@ -89,18 +90,17 @@
         </div>
       </mat-card>
 
-      <div class="actions">
+      <div style="grid-area: actions" class="actions">
         <button mat-button mat-raised-button type="submit"
           color="primary"
           [disabled]="formGroup.invalid">
           Aceptar
         </button>
-        <button mat-button mat-raised-button
+        <button mat-button mat-raised-button type="button"
           (click)="onCancel()">
           Cancelar
         </button>
       </div>
-
     </form>
   </div>
 </div>
