--- a/src/app/management/routes/sales/form-dialog/sell-manager-form-dialog.component.html
+++ b/src/app/management/routes/sales/form-dialog/sell-manager-form-dialog.component.html
@@ -12,7 +12,7 @@
 
       <mat-form-field style="grid-area: type">
         <mat-select placeholder="Tipo de Venta" formControlName="type">
-          <mat-option *ngFor="let t of (sellTypes$ | async)" [value]="t.codigo">
+          <mat-option *ngFor="let t of (sellTypes$ | async)" [value]="t.id">
             {{ t.description }}
           </mat-option>
         </mat-select>
@@ -21,7 +21,7 @@
       <mat-form-field style="grid-area: seller">
         <mat-select placeholder="Vendedor" formControlName="employee">
           <mat-option *ngFor="let e of (employees$ | async)" [value]="e.id">
-            {{ e.name }}
+            {{ e.person.name }}
           </mat-option>
         </mat-select>
       </mat-form-field>
@@ -29,7 +29,7 @@
       <mat-form-field style="grid-area: client">
         <mat-select placeholder="Cliente" formControlName="client">
           <mat-option *ngFor="let c of (clients$ | async)" [value]="c.id">
-            {{ c.name }}
+            {{ c.person.name }}
           </mat-option>
         </mat-select>
       </mat-form-field>
@@ -37,51 +37,48 @@
       <mat-card style="grid-area: details">
         <div class="details-header">
           <h3>Productos de esta Venta</h3>
-          <button mat-button mat-raised-button color="primary"
+          <button mat-button mat-raised-button type="button"
+            color="primary"
             (click)="onClickAddProducts()">
             Agregar
           </button>
         </div>
         <div class="details-table-wrapper">
-          <table mat-table #detailsTable [dataSource]="sellDetails$">
+          <table mat-table [dataSource]="sellDetails$">
             <ng-container matColumnDef="product">
               <th mat-header-cell *matHeaderCellDef> Nombre </th>
-              <td mat-cell *matCellDef="let detail" class="left">
-                {{ detail.name }}
+              <td mat-cell *matCellDef="let detail">
+                {{ detail.product.name }}
               </td>
             </ng-container>
             <ng-container matColumnDef="price">
               <th mat-header-cell *matHeaderCellDef> Precio </th>
-              <td mat-cell *matCellDef="let detail" class="left">
+              <td mat-cell *matCellDef="let detail">
                 ${{ detail.product.price }}
               </td>
             </ng-container>
             <ng-container matColumnDef="quantity">
               <th mat-header-cell *matHeaderCellDef> Cantidad </th>
-              <td mat-cell *matCellDef="let detail; let i=index" class="left">
-                <div>
-                  <button mat-button mat-icon-button
-                    (click)="onClickIncreaseDetailProductQuantity(i)">
-                    <mat-icon>add</mat-icon>
-                  </button>
-                  {{ d.units }}
-                  <button mat-button mat-icon-button
-                    [disabled]="(detail.units < 2)"
-                    (click)="onClickDecreaseDetailProductQuantity(i)">
-                    <mat-icon>remove</mat-icon>
-                  </button>
-                </div>
+              <td mat-cell *matCellDef="let detail; let i=index">
+                <button mat-button mat-icon-button type="button"
+                  (click)="onClickIncreaseDetailProductQuantity(i)">
+                  <mat-icon>add</mat-icon>
+                </button>
+                {{ detail.units }}
+                <button mat-button mat-icon-button type="button"
+                  (click)="onClickDecreaseDetailProductQuantity(i)">
+                  <mat-icon>remove</mat-icon>
+                </button>
               </td>
             </ng-container>
             <ng-container matColumnDef="actions">
               <th mat-header-cell *matHeaderCellDef> </th>
               <td mat-cell *matCellDef="let i=index">
-                <div>
-                  <button mat-button mat-icon-button color="warn"
-                    (click)="onClickBorrarDetalle(i)">
-                    <mat-icon>delete</mat-icon>
-                  </button>
-                </div>
+                <button mat-button mat-icon-button type="button"
+                  color="warn"
+                  (click)="onClickRemoveDetail(i)">
+                  <mat-icon>delete</mat-icon>
+                </button>
               </td>
             </ng-container>
 
@@ -91,20 +88,23 @@
         </div>
       </mat-card>
 
-      <div class="summary">
-        <div>Subtotal: ${{ sellSubtotalValue$ | async }}</div>
-        <div>Total: ${{ sellTotalValue$ | async }}</div>
-      </div>
+      <div style="grid-area: summary">
+        <div class="summary-data">
+          <div>Subtotal: ${{ sellSubtotalValue$ | async }}</div>
+          <div>Total: ${{ sellTotalValue$ | async }}</div>
+        </div>
 
-      <div class="actions">
-        <button mat-button mat-raised-button
-          color="primary"
-          [disabled]="formGroup.invalid">
-          Aceptar
-        </button>
-        <button mat-button mat-raised-button (click)="onCancel()">
-          Cancelar
-        </button>
+        <div class="actions">
+          <button mat-button mat-raised-button type="submit"
+            color="primary"
+            [disabled]="formGroup.invalid">
+            Aceptar
+          </button>
+          <button mat-button mat-raised-button type="button"
+            (click)="onCancel()">
+            Cancelar
+          </button>
+        </div>
       </div>
     </form>
   </div>
