fix style & constructor of products-array

--- a/src/app/management/products-array-dialog/products-array-dialog.component.css
+++ b/src/app/management/products-array-dialog/products-array-dialog.component.css
@@ -25,3 +25,9 @@ th, td {
 mat-expansion-panel, mat-card {
   margin: 1rem 0;
 }
+
+.actions {
+  display: flex;
+  flex-flow: row nowrap;
+  justify-content: space-around;
+}
