--- a/src/app/management/routes/products/product-manager.component.html
+++ b/src/app/management/routes/products/product-manager.component.html
@@ -9,51 +9,51 @@
       <table mat-table class="full-width-min" [dataSource]="items$">
         <ng-container matColumnDef="name">
           <th mat-header-cell *matHeaderCellDef> Nombre </th>
-          <td mat-cell *matCellDef="let product" class="left">
-            {{product.name}}
+          <td mat-cell *matCellDef="let product">
+            {{ product.name }}
           </td>
         </ng-container>
         <ng-container matColumnDef="barcode">
           <th mat-header-cell *matHeaderCellDef> Codigo </th>
-          <td mat-cell *matCellDef="let product" class="left">
-            {{product.barcode}}
+          <td mat-cell *matCellDef="let product">
+            {{ product.barcode }}
           </td>
         </ng-container>
         <ng-container matColumnDef="price">
           <th mat-header-cell *matHeaderCellDef> Precio </th>
-          <td mat-cell *matCellDef="let product" class="left">
-            {{product.price}}
+          <td mat-cell *matCellDef="let product">
+            {{ product.price }}
           </td>
         </ng-container>
         <ng-container matColumnDef="currentStock">
           <th mat-header-cell *matHeaderCellDef> Stock Actual </th>
-          <td mat-cell *matCellDef="let product" class="left">
-            {{product.currentStock}}
+          <td mat-cell *matCellDef="let product">
+            {{ product.currentStock }}
           </td>
         </ng-container>
         <ng-container matColumnDef="criticalStock">
           <th mat-header-cell *matHeaderCellDef> Stock Crítico </th>
-          <td mat-cell *matCellDef="let product" class="left">
-            {{product.criticalStock}}
+          <td mat-cell *matCellDef="let product">
+            {{ product.criticalStock }}
           </td>
         </ng-container>
         <ng-container matColumnDef="type">
           <th mat-header-cell *matHeaderCellDef> Tipo </th>
-          <td mat-cell *matCellDef="let product" class="left">
-            {{product.productType.name}}
+          <td mat-cell *matCellDef="let product">
+            {{ product.productType.name }}
           </td>
         </ng-container>
         <ng-container matColumnDef="actions">
           <th mat-header-cell *matHeaderCellDef></th>
           <td mat-cell *matCellDef="let product">
             <div>
-              <button mat-button mat-icon-button
+              <button mat-button mat-icon-button type="button"
                 color="primary"
                 [disabled]="busy$ | async"
                 (click)="onClickEdit(product)">
                 <mat-icon>edit</mat-icon>
               </button>
-              <button mat-button mat-icon-button
+              <button mat-button mat-icon-button type="button"
                 color="warn"
                 [disabled]="busy$ | async"
                 (click)="onClickDelete(product)">
