--- a/src/app/management/routes/providers/provider-manager.component.html
+++ b/src/app/management/routes/providers/provider-manager.component.html
@@ -9,27 +9,27 @@
       <table mat-table class="full-width-min" [dataSource]="items$">
         <ng-container matColumnDef="name">
           <th mat-header-cell *matHeaderCellDef> Nombre </th>
-          <td mat-cell *matCellDef="let provider" class="left">
-            {{provider.person.name}}
+          <td mat-cell *matCellDef="let provider">
+            {{ provider.person.name }}
           </td>
         </ng-container>
         <ng-container matColumnDef="idCard">
           <th mat-header-cell *matHeaderCellDef> Rut </th>
-          <td mat-cell *matCellDef="let provider" class="left">
-            {{provider.person.idCard}}
+          <td mat-cell *matCellDef="let provider">
+            {{ provider.person.idCard }}
           </td>
         </ng-container>
         <ng-container matColumnDef="actions">
           <th mat-header-cell *matHeaderCellDef> </th>
           <td mat-cell *matCellDef="let provider">
             <div>
-              <button mat-button mat-icon-button
+              <button mat-button mat-icon-button type="button"
                 color="primary"
                 [disabled]="busy$ | async"
                 (click)="onClickEdit(provider)">
                 <mat-icon>edit</mat-icon>
               </button>
-              <button mat-button mat-icon-button
+              <button mat-button mat-icon-button type="button"
                 color="warn"
                 [disabled]="busy$ | async"
                 (click)="onClickDelete(provider)">
