--- a/src/app/management/routes/purchase_orders/form-dialog/purchase-order-manager-form-dialog.component.html
+++ b/src/app/management/routes/purchase_orders/form-dialog/purchase-order-manager-form-dialog.component.html
@@ -41,19 +41,19 @@
           <table mat-table [dataSource]="purchaseOrderDetails$">
             <ng-container matColumnDef="product">
               <th mat-header-cell *matHeaderCellDef> Nombre </th>
-              <td mat-cell *matCellDef="let detail" class="left">
+              <td mat-cell *matCellDef="let detail">
                 {{ detail.product.name }}
               </td>
             </ng-container>
             <ng-container matColumnDef="price">
               <th mat-header-cell *matHeaderCellDef> Precio </th>
-              <td mat-cell *matCellDef="let detail" class="left">
+              <td mat-cell *matCellDef="let detail">
                 ${{ detail.product.price }}
               </td>
             </ng-container>
             <ng-container matColumnDef="quantity">
               <th mat-header-cell *matHeaderCellDef> Cantidad </th>
-              <td mat-cell *matCellDef="let detail; let i=index" class="left">
+              <td mat-cell *matCellDef="let detail; let i=index">
                 <div>
                   <button mat-button mat-icon-button
                     (click)="onClickIncreaseDetailProductQuantity(i)">
