--- a/src/app/store/routes/cart/store-cart.component.html
+++ b/src/app/store/routes/cart/store-cart.component.html
@@ -4,7 +4,7 @@
     <table mat-table [dataSource]="sellDetails$">
       <ng-container matColumnDef="product">
         <th mat-header-cell *matHeaderCellDef> Producto  </th>
-        <td mat-cell *matCellDef="let detail" class="left">
+        <td mat-cell *matCellDef="let detail">
           <span class="name">{{ detail.product.name }}</span><br/>
           <span class="barcode">{{ detail.product.barcode }}</span>
         </td>
